experimental/ir/testdata/options/values/int64.proto.stderr.txt
error: nested array expressions are not allowed
  --> testdata/options/values/int64.proto:58:42
   |
58 |     i1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |         ---------------------------------^^---------
   |          |                               |
   |          ...within this array expression cannot nest this array expression...

error: unexpected range expression in option setting value
  --> testdata/options/values/int64.proto:58:46
   |
58 |     i1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                              ^^^^^^

error: nested array expressions are not allowed
  --> testdata/options/values/int64.proto:59:42
   |
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |         ---------------------------------^^---------
   |          |                               |
   |          ...within this array expression cannot nest this array expression...

error: unexpected range expression in option setting value
  --> testdata/options/values/int64.proto:59:46
   |
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                              ^^^^^^

error: nested array expressions are not allowed
  --> testdata/options/values/int64.proto:60:42
   |
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |         ---------------------------------^^---------
   |          |                               |
   |          ...within this array expression cannot nest this array expression...

error: unexpected range expression in option setting value
  --> testdata/options/values/int64.proto:60:46
   |
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                              ^^^^^^

error: nested array expressions are not allowed
  --> testdata/options/values/int64.proto:61:42
   |
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |         ---------------------------------^^---------
   |          |                               |
   |          ...within this array expression cannot nest this array expression...

error: unexpected range expression in option setting value
  --> testdata/options/values/int64.proto:61:46
   |
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                              ^^^^^^

error: nested array expressions are not allowed
  --> testdata/options/values/int64.proto:62:42
   |
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |         ---------------------------------^^---------
   |          |                               |
   |          ...within this array expression cannot nest this array expression...

error: unexpected range expression in option setting value
  --> testdata/options/values/int64.proto:62:46
   |
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                              ^^^^^^

error: literal out of range for `int64`
  --> testdata/options/values/int64.proto:26:9
   |
26 |         0x8000000000000000, -0x8000000000000001,  // Out-of-range values.
   |         ^^^^^^^^^^^^^^^^^^
27 |         0x10000000000000000 // *big.Int value.
...
66 |     repeated int64 i1 = 1;
   |     -------------- expected due to this
   |
   = note: the range for `int64` is `-0x8000000000000000 to 0x7fffffffffffffff`

error: literal out of range for `int64`
  --> testdata/options/values/int64.proto:26:29
   |
26 |         0x8000000000000000, -0x8000000000000001,  // Out-of-range values.
   |                             ^^^^^^^^^^^^^^^^^^^
27 |         0x10000000000000000 // *big.Int value.
...
66 |     repeated int64 i1 = 1;
   |     -------------- expected due to this
   |
   = note: the range for `int64` is `-0x8000000000000000 to 0x7fffffffffffffff`

error: literal out of range for `int64`
  --> testdata/options/values/int64.proto:27:9
   |
27 |         0x10000000000000000 // *big.Int value.
   |         ^^^^^^^^^^^^^^^^^^^
...
66 |     repeated int64 i1 = 1;
   |     -------------- expected due to this
   |
   = note: the range for `int64` is `-0x8000000000000000 to 0x7fffffffffffffff`

error: literal out of range for `sint64`
  --> testdata/options/values/int64.proto:32:9
   |
32 |         0x8000000000000000, -0x8000000000000001,  // Out-of-range values.
   |         ^^^^^^^^^^^^^^^^^^
33 |         0x10000000000000000 // *big.Int value.
...
66 |     repeated int64 i1 = 1;
67 |     repeated sint64 i2 = 2;
   |     --------------- expected due to this
   |
   = note: the range for `sint64` is `-0x8000000000000000 to 0x7fffffffffffffff`

error: literal out of range for `sint64`
  --> testdata/options/values/int64.proto:32:29
   |
32 |         0x8000000000000000, -0x8000000000000001,  // Out-of-range values.
   |                             ^^^^^^^^^^^^^^^^^^^
33 |         0x10000000000000000 // *big.Int value.
...
66 |     repeated int64 i1 = 1;
67 |     repeated sint64 i2 = 2;
   |     --------------- expected due to this
   |
   = note: the range for `sint64` is `-0x8000000000000000 to 0x7fffffffffffffff`

error: literal out of range for `sint64`
  --> testdata/options/values/int64.proto:33:9
   |
33 |         0x10000000000000000 // *big.Int value.
   |         ^^^^^^^^^^^^^^^^^^^
...
66 |     repeated int64 i1 = 1;
67 |     repeated sint64 i2 = 2;
   |     --------------- expected due to this
   |
   = note: the range for `sint64` is `-0x8000000000000000 to 0x7fffffffffffffff`

error: literal out of range for `sfixed64`
  --> testdata/options/values/int64.proto:38:9
   |
38 |         0x8000000000000000, -0x8000000000000001,  // Out-of-range values.
   |         ^^^^^^^^^^^^^^^^^^
39 |         0x10000000000000000 // *big.Int value.
...
67 |     repeated sint64 i2 = 2;
68 |     repeated sfixed64 i3 = 3;
   |     ----------------- expected due to this
   |
   = note: the range for `sfixed64` is `-0x8000000000000000 to
           0x7fffffffffffffff`

error: literal out of range for `sfixed64`
  --> testdata/options/values/int64.proto:38:29
   |
38 |         0x8000000000000000, -0x8000000000000001,  // Out-of-range values.
   |                             ^^^^^^^^^^^^^^^^^^^
39 |         0x10000000000000000 // *big.Int value.
...
67 |     repeated sint64 i2 = 2;
68 |     repeated sfixed64 i3 = 3;
   |     ----------------- expected due to this
   |
   = note: the range for `sfixed64` is `-0x8000000000000000 to
           0x7fffffffffffffff`

error: literal out of range for `sfixed64`
  --> testdata/options/values/int64.proto:39:9
   |
39 |         0x10000000000000000 // *big.Int value.
   |         ^^^^^^^^^^^^^^^^^^^
...
67 |     repeated sint64 i2 = 2;
68 |     repeated sfixed64 i3 = 3;
   |     ----------------- expected due to this
   |
   = note: the range for `sfixed64` is `-0x8000000000000000 to
           0x7fffffffffffffff`

error: literal out of range for `uint64`
  --> testdata/options/values/int64.proto:44:9
   |
44 |         -1, -2,
   |         ^^
45 |         0xffffffffffffffff, // Max value.
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: the range for `uint64` is `0 to 18446744073709551615`

error: literal out of range for `uint64`
  --> testdata/options/values/int64.proto:44:13
   |
44 |         -1, -2,
   |             ^^
45 |         0xffffffffffffffff, // Max value.
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: the range for `uint64` is `0 to 18446744073709551615`

error: literal out of range for `uint64`
  --> testdata/options/values/int64.proto:46:9
   |
46 |         0x10000000000000000, -0x8000000000000000, // Out-of-range values.
   |         ^^^^^^^^^^^^^^^^^^^
47 |         0x10000000000000000 // *big.Int value.
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: the range for `uint64` is `0x0 to 0xffffffffffffffff`

error: literal out of range for `uint64`
  --> testdata/options/values/int64.proto:46:30
   |
46 |         0x10000000000000000, -0x8000000000000000, // Out-of-range values.
   |                              ^^^^^^^^^^^^^^^^^^^
47 |         0x10000000000000000 // *big.Int value.
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: the range for `uint64` is `0x0 to 0xffffffffffffffff`

error: literal out of range for `uint64`
  --> testdata/options/values/int64.proto:47:9
   |
47 |         0x10000000000000000 // *big.Int value.
   |         ^^^^^^^^^^^^^^^^^^^
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: the range for `uint64` is `0x0 to 0xffffffffffffffff`

error: literal out of range for `fixed64`
  --> testdata/options/values/int64.proto:51:9
   |
51 |         -1, -2,
   |         ^^
52 |         0xffffffffffffffff, // Max value.
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: the range for `fixed64` is `0 to 18446744073709551615`

error: literal out of range for `fixed64`
  --> testdata/options/values/int64.proto:51:13
   |
51 |         -1, -2,
   |             ^^
52 |         0xffffffffffffffff, // Max value.
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: the range for `fixed64` is `0 to 18446744073709551615`

error: literal out of range for `fixed64`
  --> testdata/options/values/int64.proto:53:9
   |
53 |         0x10000000000000000, -0x8000000000000000, // Out-of-range values.
   |         ^^^^^^^^^^^^^^^^^^^
54 |         0x10000000000000000 // *big.Int value.
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: the range for `fixed64` is `0x0 to 0xffffffffffffffff`

error: literal out of range for `fixed64`
  --> testdata/options/values/int64.proto:53:30
   |
53 |         0x10000000000000000, -0x8000000000000000, // Out-of-range values.
   |                              ^^^^^^^^^^^^^^^^^^^
54 |         0x10000000000000000 // *big.Int value.
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: the range for `fixed64` is `0x0 to 0xffffffffffffffff`

error: literal out of range for `fixed64`
  --> testdata/options/values/int64.proto:54:9
   |
54 |         0x10000000000000000 // *big.Int value.
   |         ^^^^^^^^^^^^^^^^^^^
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: the range for `fixed64` is `0x0 to 0xffffffffffffffff`

error: mismatched types
  --> testdata/options/values/int64.proto:58:10
   |
58 |     i1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |          ^^^ expected `int64`, found floating-point literal
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
   |     -------------- expected due to this
   |
   = note: expected: scalar type `int64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:58:15
   |
58 |     i1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |               ^^^^^ expected `int64`, found `string`
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
   |     -------------- expected due to this
   |
   = note: expected: scalar type `int64`
              found: scalar type `string`

error: mismatched types
  --> testdata/options/values/int64.proto:58:22
   |
58 |     i1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                      ^^^^ expected `int64`, found `bool`
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
   |     -------------- expected due to this
   |
   = note: expected: scalar type `int64`
              found: scalar type `bool`

error: mismatched types
  --> testdata/options/values/int64.proto:58:28
   |
58 |     i1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                            ^^^
   |                            |
   |                            expected `int64`, found floating-point literal
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
   |     -------------- expected due to this
   |
   = note: expected: scalar type `int64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:58:33
   |
58 |     i1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                 ^^^
   |                                 |
   |                                 expected `int64`, found floating-point literal
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
   |     -------------- expected due to this
   |
   = note: expected: scalar type `int64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:58:38
   |
58 |     i1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                      ^^
   |                                      |
   |                                      expected `int64`, found message expression
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
   |     -------------- expected due to this
   |
   = note: expected: scalar type `int64`
              found: message expression

error: mismatched types
  --> testdata/options/values/int64.proto:59:10
   |
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |          ^^^ expected `sint64`, found floating-point literal
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
67 |     repeated sint64 i2 = 2;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `sint64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:59:15
   |
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |               ^^^^^ expected `sint64`, found `string`
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
67 |     repeated sint64 i2 = 2;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `sint64`
              found: scalar type `string`

error: mismatched types
  --> testdata/options/values/int64.proto:59:22
   |
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                      ^^^^ expected `sint64`, found `bool`
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
67 |     repeated sint64 i2 = 2;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `sint64`
              found: scalar type `bool`

error: mismatched types
  --> testdata/options/values/int64.proto:59:28
   |
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                            ^^^
   |                            |
   |                            expected `sint64`, found floating-point literal
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
67 |     repeated sint64 i2 = 2;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `sint64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:59:33
   |
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                 ^^^
   |                                 |
   |                                 expected `sint64`, found floating-point literal
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
67 |     repeated sint64 i2 = 2;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `sint64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:59:38
   |
59 |     i2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                      ^^
   |                                      |
   |                                      expected `sint64`, found message expression
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
66 |     repeated int64 i1 = 1;
67 |     repeated sint64 i2 = 2;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `sint64`
              found: message expression

error: mismatched types
  --> testdata/options/values/int64.proto:60:10
   |
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |          ^^^ expected `sfixed64`, found floating-point literal
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
67 |     repeated sint64 i2 = 2;
68 |     repeated sfixed64 i3 = 3;
   |     ----------------- expected due to this
   |
   = note: expected: scalar type `sfixed64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:60:15
   |
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |               ^^^^^ expected `sfixed64`, found `string`
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
67 |     repeated sint64 i2 = 2;
68 |     repeated sfixed64 i3 = 3;
   |     ----------------- expected due to this
   |
   = note: expected: scalar type `sfixed64`
              found: scalar type `string`

error: mismatched types
  --> testdata/options/values/int64.proto:60:22
   |
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                      ^^^^ expected `sfixed64`, found `bool`
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
67 |     repeated sint64 i2 = 2;
68 |     repeated sfixed64 i3 = 3;
   |     ----------------- expected due to this
   |
   = note: expected: scalar type `sfixed64`
              found: scalar type `bool`

error: mismatched types
  --> testdata/options/values/int64.proto:60:28
   |
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                            ^^^
   |                            |
   |                            expected `sfixed64`, found floating-point literal
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
67 |     repeated sint64 i2 = 2;
68 |     repeated sfixed64 i3 = 3;
   |     ----------------- expected due to this
   |
   = note: expected: scalar type `sfixed64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:60:33
   |
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                 ^^^
   |                                 |
   |                                 expected `sfixed64`, found floating-point literal
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
67 |     repeated sint64 i2 = 2;
68 |     repeated sfixed64 i3 = 3;
   |     ----------------- expected due to this
   |
   = note: expected: scalar type `sfixed64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:60:38
   |
60 |     i3: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                      ^^
   |                                      |
   |                                      expected `sfixed64`, found message expression
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
67 |     repeated sint64 i2 = 2;
68 |     repeated sfixed64 i3 = 3;
   |     ----------------- expected due to this
   |
   = note: expected: scalar type `sfixed64`
              found: message expression

error: mismatched types
  --> testdata/options/values/int64.proto:61:10
   |
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |          ^^^ expected `uint64`, found floating-point literal
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `uint64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:61:15
   |
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |               ^^^^^ expected `uint64`, found `string`
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `uint64`
              found: scalar type `string`

error: mismatched types
  --> testdata/options/values/int64.proto:61:22
   |
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                      ^^^^ expected `uint64`, found `bool`
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `uint64`
              found: scalar type `bool`

error: mismatched types
  --> testdata/options/values/int64.proto:61:28
   |
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                            ^^^
   |                            |
   |                            expected `uint64`, found floating-point literal
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `uint64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:61:33
   |
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                 ^^^
   |                                 |
   |                                 expected `uint64`, found floating-point literal
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `uint64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:61:38
   |
61 |     u1: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                      ^^
   |                                      |
   |                                      expected `uint64`, found message expression
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
...
70 |     repeated uint64 u1 = 11;
   |     --------------- expected due to this
   |
   = note: expected: scalar type `uint64`
              found: message expression

error: mismatched types
  --> testdata/options/values/int64.proto:62:10
   |
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |          ^^^ expected `fixed64`, found floating-point literal
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: expected: scalar type `fixed64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:62:15
   |
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |               ^^^^^ expected `fixed64`, found `string`
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: expected: scalar type `fixed64`
              found: scalar type `string`

error: mismatched types
  --> testdata/options/values/int64.proto:62:22
   |
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                      ^^^^ expected `fixed64`, found `bool`
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: expected: scalar type `fixed64`
              found: scalar type `bool`

error: mismatched types
  --> testdata/options/values/int64.proto:62:28
   |
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                            ^^^
   |                            |
   |                            expected `fixed64`, found floating-point literal
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: expected: scalar type `fixed64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:62:33
   |
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                 ^^^
   |                                 |
   |                                 expected `fixed64`, found floating-point literal
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: expected: scalar type `fixed64`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/int64.proto:62:38
   |
62 |     u2: [1.5, "foo", true, inf, nan, {}, [], 0 to 1]
   |                                      ^^
   |                                      |
   |                                      expected `fixed64`, found message expression
...
70 |     repeated uint64 u1 = 11;
71 |     repeated fixed64 u2 = 12;
   |     ---------------- expected due to this
   |
   = note: expected: scalar type `fixed64`
              found: message expression

encountered 59 errors
